--- a/templates/base.html
+++ b/templates/base.html
@@ -44,13 +44,9 @@
   </nav>
   <div class="container-fluid">
     <div class="row">
-      <div class="col-sm-2">
-      {% block sidebar %}
-
-     {% endblock %}
+      <div class="col-sm-12 ">
+        {% block content %} {% endblock %}
       </div>
-      <div class="col-sm-10 ">
-        {% block content %} {% endblock %}</div>
     </div>
   </div>
 </body>
