--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -3,16 +3,20 @@
 {% block content %}
 
   {% if form.errors %}
-    <p>Your username and password didn't match. Please try again.</p>
+    <div class="alert alert-info">
+      <strong>Your username and password didn't match. Please try again</strong>
+    </div>
   {% endif %}
 
   {% if next %}
-    {% if user.is_authenticated %}
-      <p>Your account doesn't have access to this page. To proceed,
-      please login with an account that has access.</p>
-    {% else %}
-      <p>Please login to see this page.</p>
-    {% endif %}
+    <div class="alert alert-info">
+        {% if user.is_authenticated %}
+            <strong>Your account doesn't have access to this page. To proceed,
+          please login with an account that has access.</strong>
+        {% else %}
+            <strong>Please login to see this page.</strong>
+        {% endif %}
+    </div>
   {% endif %}
 
   <div class="section-padding">
